# info-aiagent

./: .gitignore  AIエージェント_ID・セキュリティ要件_4階層_雛形.xlsx  AIエージェント基盤比較.xlsx  CNAME  README.md  SKILL.md  SKILL_SECURITY.md  ai_agent_catalog_v8-1.data.json  ai_agent_catalog_v8-1_data.json  ai_agent_guide_v9-0_frame.html  ai_agent_variation_selector.html  ai_security_assessment.html  ai_security_catalog.json  data.js  data.json  guide.html  index.html  security.html
.github/workflows/: aiva.yml
docs/: INDEX.md  _generate.py  フレームワーク網羅マップ.md  リスク管理体系.md  開発体系.md  開発分類_MECE分析.md
tools/aiva/: .gitignore  README.md  action.yml  pyproject.toml
tools/aiva/aiva/: __init__.py  audit.py  catalog.py  cli.py  collectors.py  config.py  coverage.py  engine.py  intake.py  integrations.py  mutator.py  probes.py  report.py  testing.py
tools/aiva/aiva/data/: probes.json  tool_registry.json
tools/aiva/aiva/detectors/: __init__.py  anomaly.py  base.py  oracles.py
tools/aiva/aiva/targets/: __init__.py  base.py  http.py  mock.py  openai.py
tools/aiva/examples/: architecture.example.json  config.http.example.json  config.mock.json  config.openai.example.json  config.template.json  test_security_example.py
tools/aiva/tests/: test_smoke.py
tools/aiva/tests/fixtures/: garak.report.jsonl  mcp_scan.json
tools/aiva/threat_intake/: README.md  example__skeleton_key.json
